#0,1,0,20220221
	Image Blure, Fallof, Untile Node preset can be append from "Shader editor/Tools/Append Node Trees/..."

#0,1,0,20220202
	Helix primitive height miscalculation fixed.
	Primitive Icosphere issue with Blender 3.0 fixed (API update).
	All Quadmenu Items rechecked and refiend much as possible.

#0,1,0,20220124
	Create Line, Empty and Lights issu from last update fixed.
	Primitive draw on surface and view Done.
	Hold 'Ctrl' while draw primitive opjects draws on one step.
	Better method for calculate second radius (Cone, Helix).
	Note: Some of primitive (e.g. Arc) not working for now but will fix and update soon.

#0,1,0,20220111
	Tool menu issue from last update fixed.
	The error on Disable/Enalble of addon fixed.
	'anim.set_key_filters' unregister issue fixed.

#0,1,0,20220109
	'Align object' tool completely renewed based on world martix (better and faster).
	'Align object' can align perfectly on pose bone (Rotation and Scale).
	'Align object' do not affect selection anymore.
	'Fix override driver' tool none mesh type error solved.
	'Create object' set 'Object type visablity' on while create.

#0,1,0,20211210
	'Select Camera' Operator issue fixed for scene without Camera.
	Show types toggle keys added to pose mode (Max mode).

#0,1,0,20211128
	Draw object on master collection in Blender 3.0 problem solved.
	Convert to operator issue with some modifiers fiexed.
	Code review and some clean up and arangment.

#0,1,0,20211107
	save_preferences issu fixed for Blender 3.0
	'Shift+M' call collection Menu (Max mode) (replacment for 'M' that used for Material Editor).
	'Path Constraint' by default set keys type as Linear.
	'Ctrl+S' in text editor Save text if external Save blend file if internal (Max Mode).
	'Shift+V' Preview Menu (Max Mode).

#0,1,0,20211013
	New Create Primitive operator for draw object on surface.
	Note: for now just Applyed for objects without width and length parameter.

#0,1,0,20211006